Performance measuring image